--- a/testnet.ipynb
+++ b/testnet.ipynb
@@ -91,6 +91,7 @@
     "    \n",
     "    fullpath = os.path.join(mask_dir, file)\n",
     "    mat_file =  sio.loadmat(fullpath)\n",
+    "    #get into .mat files\n",
     "    mat_e= mat_file['E']\n",
     "    mat_e= mat_e['e']\n",
     "    mat_arrs = mat_e[0].ravel()\n",
@@ -104,28 +105,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\WD-X\\Anaconda3\\envs\\tfgpu\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:516: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
-      "C:\\Users\\WD-X\\Anaconda3\\envs\\tfgpu\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:517: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
-      "C:\\Users\\WD-X\\Anaconda3\\envs\\tfgpu\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:518: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
-      "C:\\Users\\WD-X\\Anaconda3\\envs\\tfgpu\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:519: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
-      "C:\\Users\\WD-X\\Anaconda3\\envs\\tfgpu\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:520: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
-      "C:\\Users\\WD-X\\Anaconda3\\envs\\tfgpu\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:525: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from tensorflow.python.keras.models import Model, load_model\n",
     "from tensorflow.python.keras.layers import Input\n",
@@ -165,7 +147,7 @@
    "source": [
     "smooth = 1.\n",
     "\n",
-    "# Metric function\n",
+    "#metric function Dice Index - computing similarity between 2 images\n",
     "def dice_coef(y_true, y_pred):\n",
     "    y_true_f = K.flatten(y_true)\n",
     "    y_pred_f = K.flatten(y_pred)\n",
@@ -178,6 +160,8 @@
     "config = ConfigProto()\n",
     "config.gpu_options.allow_growth = True\n",
     "session = InteractiveSession(config=config)\n",
+    "\n",
+    "#load learned model from unet.ipynb script\n",
     "model = load_model('unet.h5', custom_objects={'dice_coef': dice_coef})\n"
    ]
   },
@@ -213,6 +197,7 @@
     "from tensorflow.python.keras.utils.vis_utils import plot_model\n",
     "import pydot\n",
     "\n",
+    "#plot network architecture\n",
     "plot_model(model, show_shapes=True, show_layer_names=False)\n",
     "import cv2 \n",
     "\n",
@@ -237,9 +222,7 @@
    "source": [
     "datanumber = 70\n",
     "x = X[datanumber]\n",
-    "print(x.shape)\n",
-    "\n",
-    "img=x"
+    "print(x.shape)"
    ]
   },
   {
@@ -312,10 +295,14 @@
     "for w in range(0,256):\n",
     "    for h  in range(0,256):\n",
     "        \n",
-    "        if pred[w,h] > 0.7:\n",
+    "        if pred[w,h] > 0.7: #threshold of propability matrix, range [0,1].\n",
+    "                            #1 is 100% sureness of network pixel belongs to SLEB layer\n",
     "            pred[w,h] = 1\n",
     "        else:\n",
     "            pred[w,h] = 0\n",
+    "            \n",
+    "            \n",
+    "#plot image with printed network output mask\n",
     "plt.figure(figsize=(10,10))\n",
     "plt.imshow(img)\n",
     "plt.imshow(pred, cmap='gray', alpha=0.5)\n",
@@ -352,9 +339,9 @@
    ],
    "source": [
     "y = Y[datanumber]\n",
-    "\n",
     "print(y.shape)\n",
     "\n",
+    "#plot image with printed expert mask\n",
     "plt.figure(figsize=(10,10))\n",
     "plt.imshow(img)\n",
     "plt.imshow(y, cmap='gray', alpha=0.5)\n",
@@ -376,7 +363,7 @@
     }
    ],
    "source": [
-    "#compute Dice coefficient\n",
+    "#compute Dice index\n",
     "intersection = np.logical_and(pred, y)\n",
     "dice = 2. * intersection.sum() / (pred.sum() + y.sum())\n",
     "\n",
@@ -574,8 +561,10 @@
    ],
    "source": [
     "data_dir = os.path.join(os.getcwd(), 'DATA_TEST')\n",
-    "MEAN_ALL = []\n",
     "\n",
+    "\n",
+    "#results analysis\n",
+    "MEAN_ALL = []\n",
     "THICK_PREDICTED = []\n",
     "THICK_EXPERT = []\n",
     "\n",
@@ -737,7 +726,7 @@
     }
    ],
    "source": [
-    "\n",
+    "#write full results of test\n",
     "for l in range(0,12):\n",
     "    str = 'mean expert area thickness for {} dataset: {} || mean segmentated area thickness for {} dataset: {}'.format((l+1), THICK_EXPERT[l], (l+1), THICK_PREDICTED[l])\n",
     "    print(str)\n",
@@ -748,30 +737,8 @@
     "\n",
     "print('\\n')\n",
     "str = 'dice coefficient for whole dataset (1200 test images): {}'.format(DICE_ALL)\n",
-    "print(str)\n",
-    "\n",
-    "print('\\n')\n",
-    "for l in range(0,12):\n",
-    "    print(MEAN_ALL[l])\n",
-    "print(DICE_ALL)\n",
-    "print('\\n')\n",
-    "for l in range(0,12):\n",
-    "    print(THICK_PREDICTED[l])"
+    "print(str)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
